feat: add subtask delete route * swagger definition
