# src/routes/subtask-router.ts
@@ -1,8 +1,9 @@
-import { createSubtask } from "controllers";
+import { createSubtask, deleteSubtask } from "controllers";
 import express from "express";
 
 const subtaskRouter = express.Router();
 
 subtaskRouter.post("/subtasks", createSubtask);
+subtaskRouter.delete("/subtasks/:subtaskId", deleteSubtask);
 
 export default subtaskRouter;
